--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: TACIT.bkotzen
+Package: TACITbkotzen
 Title: TACIT: Threshold based cell type assignment from single cell multiplex imaging data
 Version: 0.0.0.1
 Authors@R: 
