Signature (TYPExMARKER) format

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: TACIT.bkotzen
 Title: TACIT: Threshold based cell type assignment from single cell multiplex imaging data
 Version: 0.0.0.1
-Authors@R: 
+Authors@R: c( 
     person(given = "Khoa",
            family = "Huynh",
            role = c("aut", "cre"),
@@ -10,6 +10,7 @@ Authors@R:
            family = "Kotzen",
            role = "ctb",
            email = "blkotzen@g.ucla.edu")
+    )
 Description: Automate algorithm cell type identification using both CELLxPROTEIN and PROTEINxCELLTYPE information for spatial omics data.
 License: Apache License (>= 2)
 Encoding: UTF-8
